# OKO

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml  sweep.yaml
docs/: client-data-standard.md  client-onboarding-playbook.md  data-sourcing-engine.md  product-scope.md  tpa-data-request.md  tpa-entity-risk-scoring.md  validation-and-pilot-plan.md
oko/: __init__.py  __main__.py  config.py
oko/connectors/: __init__.py  base.py  graph_db.py  label_store.py  structured.py  vector_db.py
oko/graph/: __init__.py  builder.py  schema.py
oko/models/: __init__.py  heads.py  scorer.py
oko/models/backbones/: __init__.py  base.py  hgt.py  rgcn.py
oko/models/pretrain/: __init__.py  base.py  dgi.py  graphmae.py
oko/synthetic/: __init__.py  generator.py
oko/training/: __init__.py  evaluate.py  finetune_loop.py  losses.py  pipeline.py  pretrain_loop.py
oko/tuning/: sweep.py
oko_ingest/: __init__.py  __main__.py  fetch.py  npi.py  schemas.py  staging.py
oko_ingest/publish/: __init__.py  snapshot.py
oko_ingest/resolve/: __init__.py  deterministic.py  graph.py  normalize.py  probabilistic.py
oko_ingest/sources/: __init__.py  base.py  leie.py  nppes.py  pecos.py  sam.py
tests/: conftest.py  test_config.py  test_connectors.py  test_graph_builder.py  test_ingest.py  test_models.py  test_pretrain.py  test_resolve.py  test_synthetic.py  test_training.py
